# lidar_apollo_instance_segmentation

./: CMakeLists.txt  README.md  package.xml
config/: vlp-16.param.yaml
include/lidar_apollo_instance_segmentation/: cluster2d.hpp  debugger.hpp  detector.hpp  node.hpp  util.hpp
launch/: lidar_apollo_instance_segmentation.launch.xml
src/: cluster2d.cpp  debugger.cpp  detector.cpp  node.cpp
